--- a/Discotheque/nbproject/project.properties
+++ b/Discotheque/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/Discotheque.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.ojdbc6.jar=C:\\app\\Simon\\product\\12.1.0\\client_1\\ojdbc6.jar
+file.reference.ojdbc6.jar=D:\\app\\Isabelle\\product\\12.1.0\\client_1\\ojdbc6.jar
+file.reference.orai18n.jar=D:\\app\\Isabelle\\product\\12.1.0\\client_1\\orai18n.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc6.jar}
+    ${file.reference.ojdbc6.jar}:\
+    ${file.reference.orai18n.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=discotheque.Discotheque
+main.class=discotheque.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -65,7 +67,8 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${file.reference.ojdbc6.jar}
+    ${file.reference.ojdbc6.jar}:\
+    ${file.reference.orai18n.jar}
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
