--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,8 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+#########################
+##Net Beans
+#########################
+private.properties
